general/demo/redis/chart/templates/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: redis-ingress
  namespace: demo
spec:
  tls:
    - hosts:
        - redis.devopsdani.com
      secretName: wildcard-devopsdani.com
  rules:
    - host: redis.devopsdani.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: redis-redis-ha-haproxy
              servicePort: 6379
